syntax = "proto3";

package auth;

option go_package = "/auth";

message authenticate {
  string email = 1;
  string password = 2;
}

message authRequest {
  authenticate authEntry = 1;
}

message authResponse {
  string result = 1;
}

service authService {
  rpc Authenticate(authRequest) returns (authResponse);
}